--- a/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
+++ b/Sunwise/View/Onboarding/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -96,7 +95,7 @@
             </objects>
             <point key="canvasLocation" x="301.52671755725191" y="-270.42253521126764"/>
         </scene>
-        <!--Skin Check-->
+        <!--Skin Check View Controller-->
         <scene sceneID="KXp-SI-7BC">
             <objects>
                 <viewController storyboardIdentifier="skinCheckStoryboard" id="Gb2-Ua-9Dr" customClass="SkinCheckViewController" customModule="Sunwise" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,20 +103,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" id="gXI-qD-d85">
-                                <rect key="frame" x="0.0" y="0.0" width="392" height="560"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="560" id="luJ-QT-mhN"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2t-d4-RoL">
-                                <rect key="frame" x="0.0" y="556" width="393" height="296"/>
+                                <rect key="frame" x="0.0" y="553" width="393" height="299"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJx-zw-5o3">
-                                        <rect key="frame" x="40" y="221" width="313" height="35"/>
+                                        <rect key="frame" x="40" y="224" width="313" height="35"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="35" id="ihf-Dq-GE9"/>
+                                            <constraint firstAttribute="height" constant="35" id="rcR-Nb-FqC"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Set As My Skin Type"/>
@@ -125,60 +117,34 @@
                                             <action selector="skinTypeButtonTapped:" destination="Gb2-Ua-9Dr" eventType="touchUpInside" id="tcD-uX-5c3"/>
                                         </connections>
                                     </button>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9dl-sR-QZF">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="130"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="130" id="faS-fv-U3G"/>
-                                        </constraints>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Kau-8w-KPx">
-                                            <size key="itemSize" width="148" height="128"/>
-                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZGu-Oj-rsK">
-                                                <rect key="frame" x="0.0" y="0.0" width="148" height="128"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="r5h-WQ-xTF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="148" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </collectionViewCellContentView>
-                                                <size key="customSize" width="148" height="128"/>
-                                            </collectionViewCell>
-                                        </cells>
-                                        <connections>
-                                            <outlet property="dataSource" destination="Gb2-Ua-9Dr" id="FOO-yN-0M9"/>
-                                            <outlet property="delegate" destination="Gb2-Ua-9Dr" id="nRx-4g-6nZ"/>
-                                        </connections>
-                                    </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="UJx-zw-5o3" secondAttribute="bottom" constant="40" id="4MC-z8-48T"/>
-                                    <constraint firstAttribute="trailing" secondItem="9dl-sR-QZF" secondAttribute="trailing" id="9Pb-rK-ZVe"/>
-                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="leading" secondItem="K2t-d4-RoL" secondAttribute="leading" constant="40" id="Dou-MQ-IzX"/>
-                                    <constraint firstItem="9dl-sR-QZF" firstAttribute="top" secondItem="K2t-d4-RoL" secondAttribute="top" id="QHo-GC-paP"/>
-                                    <constraint firstAttribute="trailing" secondItem="UJx-zw-5o3" secondAttribute="trailing" constant="40" id="WS2-aj-kO0"/>
-                                    <constraint firstItem="9dl-sR-QZF" firstAttribute="leading" secondItem="K2t-d4-RoL" secondAttribute="leading" id="r1e-VT-jQY"/>
-                                    <constraint firstAttribute="height" constant="296" id="x6c-BD-5C5"/>
-                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="centerX" secondItem="K2t-d4-RoL" secondAttribute="centerX" id="xNJ-BX-f5i"/>
+                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="centerX" secondItem="K2t-d4-RoL" secondAttribute="centerX" id="BKV-NJ-f6N"/>
+                                    <constraint firstAttribute="trailing" secondItem="UJx-zw-5o3" secondAttribute="trailing" constant="40" id="HWz-BA-jpd"/>
+                                    <constraint firstItem="UJx-zw-5o3" firstAttribute="leading" secondItem="K2t-d4-RoL" secondAttribute="leading" constant="40" id="uTF-mY-FoA"/>
+                                    <constraint firstAttribute="bottom" secondItem="UJx-zw-5o3" secondAttribute="bottom" constant="40" id="xrf-4R-n4g"/>
                                 </constraints>
+                            </view>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="D1a-d8-wvQ">
+                                <rect key="frame" x="0.0" y="-10" width="393" height="563"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3fg-Bf-iEj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="K2t-d4-RoL" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="5XH-0D-9F3"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="top" secondItem="yF4-z2-RsR" secondAttribute="top" id="HU5-jW-aJI"/>
-                            <constraint firstItem="K2t-d4-RoL" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="atA-Sd-WsA"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="c9c-a5-qwx"/>
-                            <constraint firstItem="gXI-qD-d85" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="kGw-iu-1JU"/>
-                            <constraint firstAttribute="bottom" secondItem="K2t-d4-RoL" secondAttribute="bottom" id="tby-Gr-o4J"/>
+                            <constraint firstItem="3fg-Bf-iEj" firstAttribute="bottom" secondItem="D1a-d8-wvQ" secondAttribute="bottom" constant="265" id="00o-e1-KVd"/>
+                            <constraint firstItem="K2t-d4-RoL" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="ACI-v9-l2F"/>
+                            <constraint firstItem="K2t-d4-RoL" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="DBA-Kx-ZOU"/>
+                            <constraint firstItem="D1a-d8-wvQ" firstAttribute="leading" secondItem="3fg-Bf-iEj" secondAttribute="leading" id="EW1-dF-Ptm"/>
+                            <constraint firstItem="K2t-d4-RoL" firstAttribute="top" secondItem="3fg-Bf-iEj" secondAttribute="top" constant="450" id="Jhw-CC-1mi"/>
+                            <constraint firstItem="D1a-d8-wvQ" firstAttribute="top" secondItem="yF4-z2-RsR" secondAttribute="top" constant="-10" id="S1i-db-Kd1"/>
+                            <constraint firstItem="D1a-d8-wvQ" firstAttribute="trailing" secondItem="3fg-Bf-iEj" secondAttribute="trailing" id="SlZ-5E-OoE"/>
+                            <constraint firstAttribute="bottom" secondItem="K2t-d4-RoL" secondAttribute="bottom" id="lkf-cW-48E"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Skin Check" id="ydj-oD-N2g">
+                    <navigationItem key="navigationItem" id="ydj-oD-N2g">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="95o-R9-isi">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="sPP-iB-f9a">
                                 <rect key="frame" x="16" y="5" width="87" height="34.333333333333336"/>
@@ -190,7 +156,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="SetSkinTypeButton" destination="UJx-zw-5o3" id="Gv5-1J-bIc"/>
-                        <outlet property="SkinTypeCollectionView" destination="9dl-sR-QZF" id="8mW-Py-Lcm"/>
+                        <outlet property="cameraView" destination="D1a-d8-wvQ" id="5LA-uT-kdb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q5q-aS-hAG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
